--- a/eat.html
+++ b/eat.html
@@ -13,7 +13,7 @@
       html {
         height: 100%;
         color: #fff;
-        background: #fff url(./img/41654416797_.pic.jpg) no-repeat center/100%;
+        background: #cbb9a3 url(./img/91654425105_.pic_hd.jpg) no-repeat center/100% 100%;
         overflow: hidden;
       }
       body {
