--- a/eat.html
+++ b/eat.html
@@ -3,17 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>今天吃什么呢？</title>
+    <link rel='stylesheet' type='text/css' href='css/init.css'></link>
     <style type="text/css">
-      * {
-        margin: 0;
-        padding: 0;
-        text-decoration: none;
-        box-sizing: border-box;
-      }
       html {
         height: 100%;
         color: #fff;
-        background: #cbb9a3 url(./img/91654425105_.pic_hd.jpg) no-repeat center/100% 100%;
+        background: #cbb9a3 url(./img/91654425105_.pic_hd.jpg) no-repeat center/cover;
         overflow: hidden;
       }
       body {
@@ -23,7 +18,7 @@
         overflow: hidden;
       }
       #menuList {
-        height: 220px;
+        height: 232px;
         padding: 16px 16px 0;
         margin-bottom: 16px;
         overflow: auto;
